fix: fixed logic

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
             setTimeout(() => {
                 if (typeof window.selectPlanet === 'function') {
                     console.log("Выбираем Марс через 2 секунды после загрузки.");
-                    window.selectPlanet('Mars'); // Выбираем Марс
+                    window.selectPlanet(''); // Выбираем Марс
                 } else {
                     console.warn("Функция window.selectPlanet не найдена. Убедитесь, что script.js загружен.");
                 }
